apps/open-webui/base/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: default
  labels:
    app.kubernetes.io/name: open-webui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: open-webui
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
